<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/vehicle_item_border">

    <!-- Marka i model w jednej linii z przyciskami Edytuj i Info z prawej strony -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/brand_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="Brand"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/edit_vehicle"
            android:src="@drawable/ic_pencil"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/info_vehicle"
            android:src="@drawable/ic_info"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/refresh_vehicle"
            android:src="@drawable/ic_refresh"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/delete_button3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_trash"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

    <!-- Zdjęcie samochodu -->
    <ImageView
        android:id="@+id/vehicle_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vehicle_placeholder"
        android:contentDescription="@string/vehicle_image_description" />

    <!-- Przycisk Start -->
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:textStyle="bold"
        android:textSize="16sp" />
</LinearLayout>
